# gamepad-web

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
ci/: run_tests.sh
doc/: search-index.js
doc/gamepad_web/: GamepadState.t.html  MappedEvent.t.html  Mapping.t.html  enum.Axis.html  enum.Button.html  enum.EventData.html  enum.GamepadMappingType.html  enum.GamepadStateChange.html  enum.MappedEvent.html  index.html  sidebar-items.js  struct.Event.html  struct.GamepadDescription.html  struct.GamepadState.html  struct.Monitor.html  trait.Mapping.html
doc/gamepad_web/event/: enum.EventData.html  enum.MappedEvent.html  struct.Event.html
doc/gamepad_web/gamepad/: GamepadDescription.t.html  GamepadStateChange.t.html  enum.GamepadMappingType.html  enum.GamepadStateChange.html  struct.GamepadDescription.html  struct.GamepadState.html
doc/gamepad_web/mapping/: enum.Axis.html  enum.Button.html  trait.Mapping.html
doc/gamepad_web/monitor/: struct.Monitor.html
doc/implementors/gamepad_web/: trait.Mapping.js
doc/src/gamepad_web/: event.rs.html  gamepad.rs.html  lib.rs.html  mapping.rs.html  monitor.rs.html
examples/: Cargo.toml  deploy.sh
examples/layout/: Cargo.toml
examples/layout/deploy/: layout.js
examples/layout/src/: main.rs
examples/layout/static/: gamepad.css  index.html
examples/log/: Cargo.toml
examples/log/deploy/: log.js
examples/log/src/: main.rs
examples/log/static/: index.html
examples/mapping/: Cargo.toml
examples/mapping/deploy/: mapping.css  mapping.js
src/: event.rs  gamepad.rs  lib.rs  mapping.rs  monitor.rs  snapshot.rs
(+14 files in other folders)
