[package]
name = "gamepad-web"
version = "0.1.0"
authors = ["Cory Sherman <coryshrmn@gmail.com>"]

[dependencies]
stdweb = { git = "https://github.com/koute/stdweb", rev = "52cf01616a1a32ecf63af9858437d37be743b7dd" }
# TODO use crates.io's stdweb once 0.4.7 is released
# stdweb = "0.4.7"

[features]
web_test = []
